[package]
name = "ckb-testtool"
version = "0.13.1"
authors = ["Nervos Network"]
edition = "2021"
license = "MIT"
description = "CKB contract testing tools"
repository = "https://github.com/nervosnetwork/ckb-testtool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
native-simulator = [ "libloading", "serde_json" ]

[dependencies]
ckb-always-success-script = "0.0.1"
rand = "0.8"
lazy_static = "1.4"
ckb-chain-spec = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-types = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-error = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-script = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-hash = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-jsonrpc-types = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-crypto = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-resource = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-verification = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-traits = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
ckb-mock-tx-types = {git = "https://github.com/libraries/ckb.git",branch = "disable_isa_a",package="ckb-verification"}
libloading = { version = "0.8.4", optional = true }
serde_json = { version = "1.0", optional = true }
faster-hex = "0.6.1"

[dev-dependencies]
anyhow = "1.0"
ckb-system-scripts = "0.5"
